testsuite/tests/builtins/str_methods/find/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:1 ]
   │
 2 │ s.find()
   │ ────┬───  
   │     ╰───── Missing value for the "to_find" parameter
───╯
